src/test/ui/unboxed-closures/unboxed-closures-recursive-fn-using-fn-mut.stderr
error[E0499]: cannot borrow `*self` as mutable more than once at a time
  --> $DIR/unboxed-closures-recursive-fn-using-fn-mut.rs:22:21
   |
LL |         (self.func)(self, arg)
   |         ----------- ^^^^     - first borrow ends here
   |         |           |
   |         |           second mutable borrow occurs here
   |         first mutable borrow occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
